# star-agents-engine

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.example.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  exceptions.py  main.py
app/chatwoot/: __init__.py  buffer.py  client.py  schemas.py  service.py
app/db/: database.py  retry.py
app/dependencies/: __init__.py  auth.py
app/followUp/: __init__.py  consumer.py
app/models/: schemas.py  tables.py
app/rabbitmq/: __init__.py  connection.py  publisher.py  schemas.py  webhook_retry_publisher.py
app/repositories/: __init__.py  agent.py  chat_history.py  company.py  customer.py  error_log.py  imbox.py  objection.py  prompt.py  tool.py
app/routes/: __init__.py  chat.py  chatwoot.py  health.py  meta.py  voe.py
app/services/: __init__.py  chat_handler.py  chat_processor.py  context_builder.py  conversation_turn.py  meta_webhook.py  openai.py  request_manager.py  tool_handler.py
app/services/tools/: __init__.py
app/services/tools/internal/: __init__.py  finish_objection_breaker.py  next_step.py  transfer.py
app/services/tools/internal/rag/: __init__.py  embedding.py  (+3 more)
app/utils/: alerter.py  content_formatter.py
app/webhookRetry/: __init__.py  consumer.py
migrations/: env.py
migrations/versions/: 20250121_000000_001_baseline_existing_schema.py  20250205_000000_002_add_dev_command_state.py  20260221_000000_003_add_send_content_before_execution.py  20260302_000000_004_add_unique_cw_contact_id.py  20260302_000001_005_add_rag_result_to_chat_history.py
